--- a/src/app/includes/navbar/navbar.component.html
+++ b/src/app/includes/navbar/navbar.component.html
@@ -57,7 +57,7 @@
         text-sm text-gray-900 dark:text-white rounded-lg cursor-pointer
         hover:bg-gray-100 dark:hover:bg-gray-700 dark:hover:text-white
         uppercase">
-        {{utilService.version === 1 ? 'v1' : 'v2'}}
+        {{configService.version === 1 ? 'v1' : 'v2'}}
       </button>
       <!-- version switch -->
       <button
@@ -77,7 +77,7 @@
         class="inline-flex items-center font-medium justify-center px-4 py-2
         text-sm text-gray-900 dark:text-white rounded-lg cursor-pointer
         hover:bg-gray-100 dark:hover:bg-gray-700 dark:hover:text-white">
-        <img [src]="getLogo(web3Service.activeChain)" class="h-5">
+        <img [src]="getLogo(configService.chain)" class="h-5">
       </button>
 
 
