--- a/src/app/pages/accounts/accounts.component.html
+++ b/src/app/pages/accounts/accounts.component.html
@@ -55,11 +55,11 @@
                 </span>
                 {{groupService.getAccountName(account)}}
                 ({{utilService.addressPrivacy(account)}}) | Unc:
-                {{utilService.formatNumber(accountBalances
-                && accountBalances[i] ? accountBalances[i].unclaimed
+                {{utilService.formatNumber(variableService.accountBalances
+                && variableService.accountBalances[i] ? variableService.accountBalances[i].unclaimed
                 : 0)}}
               </button>
-              <span class="text-xs font-medium mr-2 px-2.5 py-0.5 rounded" [ngClass]="getMultiplierColor()">{{readyToFight[i]}}</span>
+              <span class="text-xs font-medium mr-2 px-2.5 py-0.5 rounded" [ngClass]="getMultiplierColor()">{{variableService.readyToFight[i]}}</span>
               <a [id]="'account-menu-btn-' + i" class="ml-auto cursor-pointer px-4 text-md text-warning-500"
                 (click)="showAccountDrawer(account)">...</a>`
             </div>
@@ -132,11 +132,11 @@
                         border-warning-500 rounded">
                         <div class="flex items-center mb-2">
                           <div class="w-16 text-sm font-medium
-                            text-warning-500">{{web3Service.getChainSymbol(web3Service.activeChain)}}</div>
+                            text-warning-500">{{web3Service.getChainSymbol(configService.chain)}}</div>
                           <div class="w-full text-sm font-medium
                             dark:text-white
-                            text-right">{{utilService.formatNumber(accountBalances
-                            && accountBalances[i] ? accountBalances[i].gas :
+                            text-right">{{utilService.formatNumber(variableService.accountBalances
+                            && variableService.accountBalances[i] ? variableService.accountBalances[i].gas :
                             0)}}</div>
                         </div>
                       </div>
@@ -147,8 +147,8 @@
                             text-warning-500">Unclaimed</div>
                           <div class="w-full text-sm font-medium
                             dark:text-white
-                            text-right">{{utilService.formatNumber(accountBalances
-                            && accountBalances[i] ? accountBalances[i].unclaimed
+                            text-right">{{utilService.formatNumber(variableService.accountBalances
+                            && variableService.accountBalances[i] ? variableService.accountBalances[i].unclaimed
                             : 0)}}</div>
                         </div>
                       </div>
@@ -159,8 +159,8 @@
                             text-warning-500">Claimable</div>
                           <div class="w-full text-sm font-medium
                             dark:text-white
-                            text-right">{{utilService.formatNumber(accountBalances
-                            && accountBalances[i] ? accountBalances[i].claimable
+                            text-right">{{utilService.formatNumber(variableService.accountBalances
+                            && variableService.accountBalances[i] ? variableService.accountBalances[i].claimable
                             : 0)}}</div>
                         </div>
                       </div>
@@ -171,8 +171,8 @@
                             text-warning-500">Wallet</div>
                           <div class="w-full text-sm font-medium
                             dark:text-white
-                            text-right">{{utilService.formatNumber(accountBalances
-                            && accountBalances[i] ? accountBalances[i].wallet :
+                            text-right">{{utilService.formatNumber(variableService.accountBalances
+                            && variableService.accountBalances[i] ? variableService.accountBalances[i].wallet :
                             0)}}</div>
                         </div>
                       </div>
@@ -259,7 +259,7 @@
                           </tr>
                           <tr class="bg-white border-b dark:bg-gray-900
                             dark:border-gray-700" *ngFor="let char of
-                            accountChars[i]; let j=index">
+                            variableService.accountChars[i]; let j=index">
                             <th scope="row" class="px-6 py-4 font-medium
                               text-gray-900 whitespace-nowrap
                               dark:text-white">
@@ -281,7 +281,7 @@
                               {{char.exp}}
                             </td>
                             <td class="px-6 py-4">
-                              {{char.nextLevel.level}} (<span [class]="char.nextExp <= 0 ? 'text-warning-500' : null">{{char.nextExp <= 0 ? 'Claim now' : char.nextExp.toLocaleString('en-US') + ' exp left'}}</span>)
+                              {{char.nextLevel.level + 1}} (<span [class]="char.nextExp <= 0 ? 'text-warning-500' : null">{{char.nextExp <= 0 ? 'Claim now' : char.nextExp.toLocaleString('en-US') + ' exp left'}}</span>)
                             </td>
                             <td class="px-6 py-4" [ngClass]="getStaminaColor(char.stamina)">
                               {{char && char.stamina ? char.stamina : ''}}
@@ -320,7 +320,7 @@
           text-center">Select
           Group</h5>
         <ul class="py-2 font-medium" role="none">
-          <li *ngFor="let group of groups; let i= index">
+          <li *ngFor="let group of variableService.groups; let i= index">
             <a (click)="setGroupIndex(i)"
               class="block px-4 py-2 text-sm text-white hover:bg-gray-100
               dark:text-white dark:hover:bg-gray-600 dark:hover:text-white"
@@ -579,7 +579,7 @@
             <select id="input-character" data-te-select-init
               data-te-select-filter="true" class="">
               <option [value]="char.data.id" *ngFor="let char of
-                accountChars[activeAccountIndex]">{{char.data.id}} |
+                variableService.accountChars[activeAccountIndex]">{{char.data.id}} |
                 {{char.data.traitName}} | Lv. {{char.data.level + 1}} |
                 {{char.stamina}}/200</option>
             </select>
@@ -638,7 +638,22 @@
   </div>
 </div>
 
-<button (click)="toggleExpanded()"
-  class="fixed z-20 bottom-4 right-4 bg-warning-600 w-12 h-12 rounded-full
+<div class="fixed z-20 bottom-20 right-4">
+<button (click)="initAll()"
+  class="bg-success-600 w-12 h-12 rounded-full
   drop-shadow-lg flex justify-center items-center text-white text-4xl
-  hover:bg-warning-700 hover:drop-shadow-2xl hover:animate-bounce duration-300">{{configService.expanded ? '&minus;' : '&plus;'}}</button>
+  hover:bg-success-700 hover:drop-shadow-2xl mb-2">
+  <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
+    <path stroke-linecap="round" stroke-linejoin="round" d="M16.023 9.348h4.992v-.001M2.985 19.644v-4.992m0 0h4.992m-4.993 0l3.181 3.183a8.25 8.25 0 0013.803-3.7M4.031 9.865a8.25 8.25 0 0113.803-3.7l3.181 3.182m0-4.991v4.99" />
+  </svg>
+</button>
+<button (click)="toggleExpanded()"
+    class="bg-warning-600 w-12 h-12 rounded-full
+    drop-shadow-lg flex justify-center items-center text-white text-4xl
+    hover:bg-warning-700 hover:drop-shadow-2xl">
+    <svg _ngcontent-qfp-c20="" fill="currentColor" viewBox="0 0
+        20 20" xmlns="http://www.w3.org/2000/svg" class="w-6 h-6 shrink-0" [style]="configService.expanded ? 'transform: rotate(180deg);' : ''"><path _ngcontent-qfp-c20="" fill-rule="evenodd" d="M5.293 7.293a1 1 0 011.414 0L10
+          10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414
+        0l-4-4a1 1 0 010-1.414z" clip-rule="evenodd"></path></svg>
+  </button>
+</div>
