--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -166,19 +166,19 @@
           Balance
         </h3>
         <div class="flex items-center mb-2">
-          <div class="w-64 text-sm font-medium text-warning-500">{{web3Service.getChainSymbol(web3Service.activeChain)}}</div>
+          <div class="w-64 text-sm font-medium text-warning-500">{{web3Service.getChainSymbol(configService.chain)}}</div>
           <div class="w-full text-sm font-medium dark:text-white text-right">{{formatNumber(balances.gas)}}</div>
         </div>
         <div class="flex items-center mb-2">
-          <div class="w-64 text-sm font-medium text-warning-500">{{utilService.version === 2 && web3Service.activeChain === 'BNB' ? 'VALOR' : 'SKILL'}} in Wallet</div>
+          <div class="w-64 text-sm font-medium text-warning-500">{{configService.version === 2 && configService.chain === 'BNB' ? 'VALOR' : 'SKILL'}} in Wallet</div>
           <div class="w-full text-sm font-medium dark:text-white text-right">{{formatNumber(balances.wallet)}}</div>
         </div>
         <div class="flex items-center mb-2">
-          <div class="w-64 text-sm font-medium text-warning-500">Unclaimed {{utilService.version === 2 && web3Service.activeChain === 'BNB' ? 'VALOR' : 'SKILL'}}</div>
+          <div class="w-64 text-sm font-medium text-warning-500">Unclaimed {{configService.version === 2 && configService.chain === 'BNB' ? 'VALOR' : 'SKILL'}}</div>
           <div class="w-full text-sm font-medium dark:text-white text-right">{{formatNumber(balances.unclaimed)}}</div>
         </div>
         <div class="flex items-center mb-2">
-          <div class="w-64 text-sm font-medium text-warning-500">Claimable {{utilService.version === 2 && web3Service.activeChain === 'BNB' ? 'VALOR' : 'SKILL'}}</div>
+          <div class="w-64 text-sm font-medium text-warning-500">Claimable {{configService.version === 2 && configService.chain === 'BNB' ? 'VALOR' : 'SKILL'}}</div>
           <div class="w-full text-sm font-medium dark:text-white text-right">{{formatNumber(balances.claimable)}}</div>
         </div>
       </div>
@@ -192,7 +192,7 @@
           Price
         </h3>
         <div class="flex items-center mb-2">
-          <div class="w-16 text-sm font-medium text-warning-500">{{web3Service.getChainSymbol(web3Service.activeChain)}}</div>
+          <div class="w-16 text-sm font-medium text-warning-500">{{web3Service.getChainSymbol(configService.chain)}}</div>
           <div class="w-full text-sm font-medium dark:text-white text-right"
             *ngIf="!isLoadingCurrency">{{formatPrice(prices.gas)}}</div>
           <div role="status" class="w-full text-sm font-medium dark:text-white
@@ -217,7 +217,7 @@
           </div>
         </div>
 
-        <div class="flex items-center mb-2" *ngIf="web3Service.activeChain ===
+        <div class="flex items-center mb-2" *ngIf="configService.chain ===
           'BNB'">
           <div class="w-16 text-sm font-medium text-warning-500">VALOR</div>
           <div class="w-full text-sm font-medium dark:text-white text-right"
