--- a/src/app/pages/options/options.component.html
+++ b/src/app/pages/options/options.component.html
@@ -51,11 +51,11 @@
             <label for="settings-language" class="block mb-2 text-sm font-medium
               text-gray-900 dark:text-white">Import Data</label>
             <div class="mt-6">
-              <button class="text-white bg-primary-700 hover:bg-primary-800
-                focus:ring-4 focus:ring-primary-300 font-medium rounded-lg
+              <button class="text-white bg-success-700 hover:bg-success-800
+                focus:ring-4 focus:ring-success-300 font-medium rounded-lg
                 text-sm
-                px-5 py-2.5 text-center dark:bg-primary-600
-                dark:hover:bg-primary-700 dark:focus:ring-primary-800">Import</button>
+                px-5 py-2.5 text-center dark:bg-success-600
+                dark:hover:bg-success-700 dark:focus:ring-success-800" (click)="showImport()">Import</button>
             </div>
           </div>
           <div class="col-start-1 col-span-6 sm:col-span-3">
@@ -67,7 +67,7 @@
                 focus:ring-4 focus:ring-primary-300 font-medium rounded-lg
                 text-sm
                 px-5 py-2.5 text-center dark:bg-primary-600
-                dark:hover:bg-primary-700 dark:focus:ring-primary-800">Export</button>
+                dark:hover:bg-primary-700 dark:focus:ring-primary-800" (click)="exportData()">Export</button>
             </div></div>
         </div>
       </div>
