--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -167,19 +167,19 @@
         </h3>
         <div class="flex items-center mb-2">
           <div class="w-64 text-sm font-medium text-warning-500">{{web3Service.getChainSymbol(configService.chain)}}</div>
-          <div class="w-full text-sm font-medium dark:text-white text-right">{{formatNumber(balances.gas)}}</div>
+          <div class="w-full text-sm font-medium dark:text-white text-right">{{formatNumber(balances.gas)}}{{configService.display ? ' (' + utilService.convertGasToLocalCurrency(balances.gas, prices, configService.currency) +')' : ''}}</div>
         </div>
         <div class="flex items-center mb-2">
           <div class="w-64 text-sm font-medium text-warning-500">{{configService.version === 2 && configService.chain === 'BNB' ? 'VALOR' : 'SKILL'}} in Wallet</div>
-          <div class="w-full text-sm font-medium dark:text-white text-right">{{formatNumber(balances.wallet)}}</div>
+          <div class="w-full text-sm font-medium dark:text-white text-right">{{formatNumber(balances.wallet)}}{{configService.display ? ' (' + utilService.convertTokenToLocalCurrency(balances.wallet, configService.version, prices, configService.currency) + ')' : ''}}</div>
         </div>
         <div class="flex items-center mb-2">
           <div class="w-64 text-sm font-medium text-warning-500">Unclaimed {{configService.version === 2 && configService.chain === 'BNB' ? 'VALOR' : 'SKILL'}}</div>
-          <div class="w-full text-sm font-medium dark:text-white text-right">{{formatNumber(balances.unclaimed)}}</div>
+          <div class="w-full text-sm font-medium dark:text-white text-right">{{formatNumber(balances.unclaimed)}}{{configService.display ? ' (' + utilService.convertTokenToLocalCurrency(balances.unclaimed, configService.version, prices, configService.currency) + ')' : ''}}</div>
         </div>
         <div class="flex items-center mb-2">
           <div class="w-64 text-sm font-medium text-warning-500">Claimable {{configService.version === 2 && configService.chain === 'BNB' ? 'VALOR' : 'SKILL'}}</div>
-          <div class="w-full text-sm font-medium dark:text-white text-right">{{formatNumber(balances.claimable)}}</div>
+          <div class="w-full text-sm font-medium dark:text-white text-right">{{formatNumber(balances.claimable)}}{{configService.display ? ' (' + utilService.convertTokenToLocalCurrency(balances.claimable, configService.version, prices, configService.currency) + ')' : ''}}</div>
         </div>
       </div>
     </div>
