--- a/src/app/pages/treasury/treasury.component.html
+++ b/src/app/pages/treasury/treasury.component.html
@@ -76,7 +76,7 @@
                 <div class="col-span-3 grid grid-cols-2 gap-4">
                   <div class="row-span-2 border border-2 border-warning-500 dark:border-warning-200 p-4">
                     <p class="text-warning-500">SKILL/{{partner.symbol}}</p>
-                    <span class="dark:text-white">{{formatSkillRatio(partner.ratio)}}</span>
+                    <span class="dark:text-white">{{utilService.formatSkillRatio(partner.ratio)}}</span>
                   </div>
                   <div class="row-span-2 border border-2 border-warning-500 dark:border-warning-200 p-4">
                     <p class="text-warning-500">Multiplier</p>
@@ -86,7 +86,7 @@
                 <div class="col-span-3 grid grid-cols-2 gap-4">
                   <div class="row-span-2 border border-2 border-warning-500 dark:border-warning-200 p-4">
                     <p class="text-warning-500">$/Unclaimed</p>
-                    <span class="dark:text-white">{{moneyPerUnclaimed(partner.price, partner.ratio, partner.multiplier)}}</span>
+                    <span class="dark:text-white">{{utilService.moneyPerUnclaimed(partner.price, partner.ratio, partner.multiplier)}}</span>
                   </div>
                   <div class="row-span-2 border border-2 border-warning-500 dark:border-warning-200 p-4">
                     <p class="text-warning-500">Distribution</p>
