--- a/src/app/includes/navbar/navbar.component.html
+++ b/src/app/includes/navbar/navbar.component.html
@@ -2,7 +2,7 @@
   <div
     class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto
     p-4">
-    <a href="/" class="flex items-center">
+    <a routerLink="/tracker/home" class="flex items-center">
       <span
         class="self-center text-2xl font-semibold whitespace-nowrap
         dark:text-white"><span class="text-warning-500">CB</span> Tracker</span>
