fix multicall and combat simulator

--- a/src/app/pages/accounts/accounts.component.html
+++ b/src/app/pages/accounts/accounts.component.html
@@ -132,7 +132,7 @@
                         border-warning-500 rounded">
                         <div class="flex items-center mb-2">
                           <div class="w-16 text-sm font-medium
-                            text-warning-500">{{web3Service.getChainSymbol(configService.chain)}}</div>
+                            text-warning-500">{{web3Service.getChainSymbol()}}</div>
                           <div class="w-full text-sm font-medium
                             dark:text-white
                             text-right">{{utilService.formatNumber(variableService.accountBalances
