--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -166,7 +166,7 @@
           Balance
         </h3>
         <div class="flex items-center mb-2">
-          <div class="w-64 text-sm font-medium text-warning-500">{{web3Service.getChainSymbol(configService.chain)}}</div>
+          <div class="w-64 text-sm font-medium text-warning-500">{{web3Service.getChainSymbol()}}</div>
           <div class="w-full text-sm font-medium dark:text-white text-right">{{formatNumber(balances.gas)}}{{configService.display ? ' (' + utilService.convertGasToLocalCurrency(balances.gas, prices, configService.currency) +')' : ''}}</div>
         </div>
         <div class="flex items-center mb-2">
@@ -192,7 +192,7 @@
           Price
         </h3>
         <div class="flex items-center mb-2">
-          <div class="w-16 text-sm font-medium text-warning-500">{{web3Service.getChainSymbol(configService.chain)}}</div>
+          <div class="w-16 text-sm font-medium text-warning-500">{{web3Service.getChainSymbol()}}</div>
           <div class="w-full text-sm font-medium dark:text-white text-right"
             *ngIf="!isLoadingCurrency">{{formatPrice(prices.gas)}}</div>
           <div role="status" class="w-full text-sm font-medium dark:text-white
