--- a/src/app/includes/ads/ads.component.html
+++ b/src/app/includes/ads/ads.component.html
@@ -4,6 +4,6 @@
     transparent;overflow: auto;'>
   </iframe>
 </div>
-<div class="xc449bad4854773ff" [attr.data-placement]="zone.id"
+<div class="_fa7cdd4c68507744" [attr.data-placement]="zone.id"
   [style]="'width:'+zone.width + 'px;height:' +zone.height +
   'px;display: inline-block;margin: 0 auto'" *ngIf="provider === 'flyersquare'"></div>
