remove pop-up ads

--- a/src/app/pages/accounts/accounts.component.html
+++ b/src/app/pages/accounts/accounts.component.html
@@ -1,5 +1,5 @@
 <div class="pt4 flex justify-center items-center text-center">
-  <app-ads></app-ads>
+  <app-ads provider="coinserom" type="728x90"></app-ads>
 </div>
 <div class="px-2 pt-4 mb-16">
   <div class="p-4 bg-white border border-gray-200 rounded-lg shadow-sm
@@ -296,7 +296,7 @@
                 <!-- ads -->
                 <div class="w-full row-span-2 p-2 flex items-center
                   justify-center">
-                  <app-ads provider="flyersquare" type="250x250"></app-ads>
+                  <app-ads provider="adaround" type="250x250"></app-ads>
                 </div>
                 <!-- end ads -->
               </div>
