--- a/src/app/pages/treasury/treasury.component.html
+++ b/src/app/pages/treasury/treasury.component.html
@@ -1,6 +1,6 @@
 
 <div class="pt4 flex justify-center items-center text-center">
-  <app-ads></app-ads>
+  <app-ads provider="coinserom" type="728x90"></app-ads>
 </div>
 <div class="px-2 pt-4 mb-16">
   <div class="p-4 bg-white border border-warning-200 rounded-lg shadow-sm
