--- a/src/app/includes/ads/ads.component.html
+++ b/src/app/includes/ads/ads.component.html
@@ -1,9 +1,21 @@
-<div style='text-align: center;overflow: auto;' *ngIf="provider === 'coinserom'">
-  <iframe src='//ads.coinserom.com/publisher?adsunit=41'
-    style='width:728px;height:90px;border:0px;padding:0;background-color:
-    transparent;overflow: auto;'>
+<div [style]="'width:'+zone.width + 'px;height:' +zone.height +'px;text-align: center;overflow: auto;'" *ngIf="provider === 'coinserom'
+  && type === '728x90'">
+  <iframe [src]="sanitizer.bypassSecurityTrustResourceUrl('//ads.coinserom.com/publisher?adsunit=41')"
+    [style]="'width:' + zone.width + 'px;height:' + zone.height + 'px;border:0px;padding:0;background-color:
+    transparent;overflow: auto;'">
   </iframe>
 </div>
+<div style="text-align: center;" *ngIf="provider === 'coinserom'
+&& type === '970x90'">
+  <a href="https://www.coinserom.com/?referral=16895">
+    <img src="https://app.coinserom.com/images/publish.gif"
+      style="max-width: 100%;border-style: none;"/>
+  </a>
+</div>z
 <div class="_fa7cdd4c68507744" [attr.data-placement]="zone.id"
-  [style]="'width:'+zone.width + 'px;height:' +zone.height +
-  'px;display: inline-block;margin: 0 auto'" *ngIf="provider === 'flyersquare'"></div>
+  [style]="'width:' + zone.width + 'px;height:' +zone.height +
+  'px;display: inline-block;margin: 0 auto'" *ngIf="provider === 'adaround'"></div>
+
+<div [style]="'width:'+zone.width + 'px;height:' +zone.height +'px;'" *ngIf="provider === 'a-ads'">
+  <iframe [attr.data-aa]="aAdsZones[page]" [src]="safeUrl" style='border:0px; padding:0; width:100%; height:100%; overflow:hidden; background-color: transparent;'></iframe>
+</div>
