--- a/src/app/pages/options/options.component.html
+++ b/src/app/pages/options/options.component.html
@@ -1,6 +1,6 @@
 
 <div class="pt4 flex justify-center items-center text-center">
-  <app-ads></app-ads>
+  <app-ads provider="coinserom" type="728x90"></app-ads>
 </div>
 <div class="px-2 pt-4">
 
