--- a/src/app/includes/ads/ads.component.html
+++ b/src/app/includes/ads/ads.component.html
@@ -11,7 +11,7 @@
     <img src="https://app.coinserom.com/images/publish.gif"
       style="max-width: 100%;border-style: none;"/>
   </a>
-</div>z
+</div>
 <div class="_fa7cdd4c68507744" [attr.data-placement]="zone.id"
   [style]="'width:' + zone.width + 'px;height:' +zone.height +
   'px;display: inline-block;margin: 0 auto'" *ngIf="provider === 'adaround'"></div>
