--- a/src/app/layout/layout.component.html
+++ b/src/app/layout/layout.component.html
@@ -6,5 +6,5 @@
   </main>
 </div>
 <div class="fixed bottom-0 z-50 w-full h-16 flex justify-center items-center text-center mt-16">
-  <app-ads provider="a-ads" [page]="page"></app-ads>
+  <app-ads provider="a-ads" type="970x90"></app-ads>
 </div>
