--- a/src/app/pages/accounts/accounts.component.html
+++ b/src/app/pages/accounts/accounts.component.html
@@ -296,7 +296,7 @@
                 <!-- ads -->
                 <div class="w-full row-span-2 p-2 flex items-center
                   justify-center">
-                  <app-ads provider="adaround" type="250x250"></app-ads>
+                  <app-ads provider="a-ads" type="250x250"></app-ads>
                 </div>
                 <!-- end ads -->
               </div>
