--- a/src/app/includes/ads/ads.component.html
+++ b/src/app/includes/ads/ads.component.html
@@ -12,10 +12,6 @@
       style="max-width: 100%;border-style: none;"/>
   </a>
 </div>
-<div class="_fa7cdd4c68507744" [attr.data-placement]="zone.id"
-  [style]="'width:' + zone.width + 'px;height:' +zone.height +
-  'px;display: inline-block;margin: 0 auto'" *ngIf="provider === 'adaround'"></div>
-
-<div [style]="'width:'+zone.width + 'px;height:' +zone.height +'px;'" *ngIf="provider === 'a-ads'">
-  <iframe [attr.data-aa]="aAdsZones[page]" [src]="safeUrl" style='border:0px; padding:0; width:100%; height:100%; overflow:hidden; background-color: transparent;'></iframe>
+<div [style]="'width:'+zone.width + 'px;height:' +zone.height +'px;display: inline-block;margin: 0 auto'" *ngIf="provider === 'a-ads'">
+  <iframe [attr.data-aa]="zone.id" [src]="safeUrl" style='border:0px; padding:0; width:100%; height:100%; overflow:hidden; background-color: transparent;'></iframe>
 </div>
