--- a/src/app/layout/layout.component.html
+++ b/src/app/layout/layout.component.html
@@ -1,10 +1,10 @@
 <app-navbar></app-navbar>
 <div id="main-content" class="relative w-full max-w-screen-2xl mx-auto h-full
-  overflow-y-auto mt-24">
+  overflow-y-auto mt-24 mb-[90px]">
   <main>
     <router-outlet></router-outlet>
   </main>
 </div>
-<div class="fixed bottom-0 z-50 w-full h-16 flex justify-center items-center text-center mt-16">
+<div class="fixed bottom-0 z-20 w-full h-[90px] flex justify-center items-center text-center mt-[90px]">
   <app-ads provider="a-ads" type="970x90"></app-ads>
 </div>
