ads dynamic size

--- a/src/app/layout/layout.component.html
+++ b/src/app/layout/layout.component.html
@@ -6,5 +6,5 @@
   </main>
 </div>
 <div class="fixed bottom-0 z-20 w-full h-[90px] flex justify-center items-center text-center mt-[90px]">
-  <app-ads provider="a-ads" type="970x90"></app-ads>
+  <app-ads provider="a-ads" type="970x90" dynamic="970x90"></app-ads>
 </div>
